syntax = "proto3";

package student;

service StudentService {
  rpc FindStuById(FindByIdReqest) returns (StudentInfo){}
  rpc FindStudents(Empty) returns (StudentList){}
}

message FindByIdReqest {
  string id = 1;
}

message Student {
  string id = 1;
  string name = 2;
  string subject = 3;
}

message StudentInfo {
  Student student = 1;
}

message StudentList {
  repeated Student students = 1;
}

message Empty {}
